updated main layout, moved over more stuff

--- a/frontend/src/app/auth/signin.view.html
+++ b/frontend/src/app/auth/signin.view.html
@@ -1,6 +1,5 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-10 col-md-8 center-form panel">
+<section class="well">
+    <div class="center-form panel">
       <div class="panel-body">
         <h2 class="text-center">Log in</h2>
         <form method="post" ng-submit="vm.login()" name="loginForm" novalidate>
@@ -29,5 +28,4 @@
         </form>
       </div>
     </div>
-  </div>
-</div>
+</section>
