--- a/frontend/src/app/auth/signup.view.html
+++ b/frontend/src/app/auth/signup.view.html
@@ -1,5 +1,4 @@
-<div class="container">
-    <div class="row">
+<section class="well">
         <div class="center-form panel">
             <div class="panel-body">
                 <h2 class="text-center">Sign up</h2>
@@ -42,5 +41,4 @@
                 </form>
             </div>
         </div>
-    </div>
-</div>
+</section>
