--- a/frontend/src/less/addiction-variables.less
+++ b/frontend/src/less/addiction-variables.less
@@ -704,3 +704,7 @@
 // Large screen / wide desktop
 @container-large-desktop:      ((1140px + @grid-gutter-width));
 @container-lg:                 @container-large-desktop;
+
+//Sidepanels
+@leftPanelWidth: 250px;
+@rightPanelWidth: 300px;
