--- a/frontend/src/app/activityfeed/right-panel-header.view.html
+++ b/frontend/src/app/activityfeed/right-panel-header.view.html
@@ -1,5 +1,7 @@
-<div id="rightPanel" class="sidePanelHeader hidden-xs">
-    <h4 ng-click="toggleRightPanel($event)" data-fittext data-fittext-min="18" data-fittext-max="26">ACTIVITY FEED</h4>
+<div id="rightPanel" class="sidePanelHeader center-block hidden-xs">
+    <h4  ng-click="toggleRightPanel($event)" data-fittext data-fittext-min="18" data-fittext-max="24">
+        ACTIVITY FEED
+    </h4>
     <form name="postForm" class="form-horizontal" ng-controller="MessageCtrl" novalidate>
         <div class="form-group" ng-hide="!rightVisible">
 
@@ -12,6 +14,7 @@
                         <button type="button" class="btn btn-default btn-sm" ng-click="createMessage()">Submit</button>
                     </span>
             </div><!-- /input-group -->
+
         </div>
     </form>
 </div>
