--- a/frontend/src/app/activityfeed/right-panel.view.html
+++ b/frontend/src/app/activityfeed/right-panel.view.html
@@ -1,4 +1,4 @@
-<scrollable static class="activity-list">
+<aside class="activity-list">
     <ul class="media-list">
         <li class="media animate" data-ng-repeat="activity in activities.data">
             <div class="media-left">
@@ -16,4 +16,4 @@
             </div>
         </li>
     </ul>
-</scrollable>
+</aside>
