--- a/frontend/src/app/core/header/navbar.view.html
+++ b/frontend/src/app/core/header/navbar.view.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
     </button>
 
-    <ul class="nav navbar-nav nav-pills pull-lef">
+    <ul class="nav navbar-nav nav-pills pull-right">
         <li data-ui-sref-active="active"><a data-ui-sref="signin">Sign In</a></li>
         <li data-ui-sref-active="active"><a data-ui-sref="signup">Sign up</a></li>
     </ul>
