--- a/frontend/src/app/online-users/left-panel-header.view.html
+++ b/frontend/src/app/online-users/left-panel-header.view.html
@@ -1,8 +1,8 @@
-<div id="leftPanel" class="sidePanelHeader hidden-xs">
-    <h4 ng-click="toggleLeftPanel($event)" data-fittext data-fittext-min="18" data-fittext-max="24">
+<div class="sidePanelHeader hidden-xs">
+    <h4 ng-click="toggleLeftPanel($event)" data-fittext="24" data-fittext-min="18" data-fittext-max="24">
         ONLINE USERS
     </h4>
     <div class="form-group" ng-hide="!leftVisible">
-        <input type="text" class="form-control input-sm" placeholder="Search Online Users">
+        <input type="text" class="form-control input-sm animated slideInLeft" placeholder="Search Online Users">
     </div>
 </div>
