--- a/frontend/src/less/main.less
+++ b/frontend/src/less/main.less
@@ -1,6 +1,6 @@
-//body {
-//  background-image: url("../images/bg.jpg") !important;
-//}
+body {
+  background-image: url("../images/bg.jpg") !important;
+}
 
 #header {
   display: block;
