--- a/frontend/src/less/addiction-main.less
+++ b/frontend/src/less/addiction-main.less
@@ -17,8 +17,7 @@ textarea:focus,
 input:focus,
 button:focus,
 button:active,
-button:hover
-{
+button:hover {
   outline:0px !important;
   -webkit-appearance: none;
 }
