--- a/frontend/src/less/sidepanel.less
+++ b/frontend/src/less/sidepanel.less
@@ -5,17 +5,11 @@
 //@rightPanelWidth
 
 .sidePanelHeader {
- // max-width: 200px;
   padding-top: 13px;
   h4 {
     cursor: pointer;
     white-space: nowrap;
-    font-size: 24px;
-    //text-transform: uppercase;
-    //@media (max-width: @screen-sm-min) {
-    //  font-size: 18px;
-    //}
-
+    text-transform: uppercase;
   }
   .form-group {
     padding-top: 15px;
@@ -27,12 +21,6 @@
 
 #leftPanel {
   float: left;
-  //min-width: 200px;
-  h4 {
-    display: block;
-    width: 250px;
-  }
-
 }
 
 #rightPanel {
@@ -99,25 +87,25 @@ side-panel > div.show.right {
   -o-transform: translate3d(-@rightPanelWidth, 0, 0);
   -moz-transform: translate3d(-@rightPanelWidth, 0, 0);
 }
-side-panel > div > side-panel-item {
-  display: block;
-}
-side-panel > div > side-panel-item > div {
-  float: left;
-  width: 100%;
-  margin: 0;
-  padding: 10px 15px;
-  border-bottom: solid 1px #555;
-  cursor: pointer;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  color: #B0B0B0;
-}
-side-panel > div > side-panel-item > div:hover {
-  color: #F0F0F0;
-}
-side-panel > div > side-panel-item > div > span {
-  float: left;
-  color: inherit;
-}
+//side-panel > div > side-panel-item {
+//  display: block;
+//}
+//side-panel > div > side-panel-item > div {
+//  float: left;
+//  width: 100%;
+//  margin: 0;
+//  padding: 10px 15px;
+//  border-bottom: solid 1px #555;
+//  cursor: pointer;
+//  box-sizing: border-box;
+//  -moz-box-sizing: border-box;
+//  color: #B0B0B0;
+//}
+//side-panel > div > side-panel-item > div:hover {
+//  color: #F0F0F0;
+//}
+//side-panel > div > side-panel-item > div > span {
+//  float: left;
+//  color: inherit;
+//}
 
