--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -19,14 +19,14 @@
 </head>
 <body ng-controller="AppCtrl">
 
-<header id="header" data-fittext data-fittext-load-delay="500">
+<header id="header">
     <nav class="navbar navbar-default navbar-fixed-top animated fadeInDown" role="navigation">
         <div class="row">
             <div id="leftPanel" class="col-sm-2">
                 <left-panel-header></left-panel-header>
             </div>
 
-            <div class="col-xs-12 col-sm-8" data-fittext data-fittext-min="18" data-fittext-max="26">
+            <div class="col-xs-12 col-sm-8">
                 <nav-bar class="navbar-adt" bs-navbar></nav-bar>
 
             </div>
