--- a/frontend/src/app/online-users/online-users-list.view.html
+++ b/frontend/src/app/online-users/online-users-list.view.html
@@ -1,7 +1,10 @@
-<div class="animated slideInLeft">
+<div>
+    <div class="form-group" ng-hide="!leftVisible">
+        <input type="text" class="form-control input-sm" placeholder="Search Online Users">
+    </div>
     <ul class="list-group">
         <li ng-repeat="user in vm.users.data | filter: search"
-            class="users-list-group-item animate"
+            class="list-group-item users-list-group-item animate"
             data-trigger="hover"
             data-animation="am-fade"
             data-content="User Stats"
