--- a/frontend/src/less/main.less
+++ b/frontend/src/less/main.less
@@ -1,25 +1,38 @@
-body {
-  background-image: url("../images/bg.jpg") !important;
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
 }
 
+body {
+  background-image: url("../images/bg.jpg");
+  background-color: white;
+}
 
 #main {
   position: relative;
-  margin-left: ((10px + @leftPanelWidth));
-  margin-right: ((10px + @rightPanelWidth));
+  margin-left: ((25px + @sidePanelSm));
+  margin-right: ((25px + @sidePanelSm));
   height: 100%;
+  @media (min-width: @screen-lg-min) {
+    margin-left: ((15 + @sidePanelMax));
+    margin-right: ((15 + @sidePanelMax));
+  }
+
   /* Small devices (tablets, 768px and below) */
   @media (max-width: @screen-sm-min) {
     margin-left: 0;
-    margin-right: 0;;
+    margin-right: 0;
     padding-right: 5px;
     padding-left: 5px;
   }
+  transition: margin 0.5s ease 0.2s;
+  -webkit-transition: margin 0.5s ease 0.2s;
 }
 
 #main.hidden-left {
   margin-left: 0;
   padding-left: 3px;
+  //transition: margin 0.75s ease 0.1s;
+  //-webkit-transition: margin 0.75s ease 0.1s;;
 }
 
 #main.hidden-right {
@@ -31,60 +44,3 @@ body {
 /*********************
 * Animations
 *********************/
-
-.fadeZoom.ng-enter {
-  -webkit-animation-duration: 0.6s, 0.2s;
-  -moz-animation-duration: 0.2s, 0.2s;
-  -ms-animation-duration: 0.2s, 0.2s;
-  animation-duration: 0.2s, 0.2s;
-  -webkit-animation-name: fadeIn, zoomIn;
-  -moz-animation-name: fadeIn, zoomIn;
-  -ms-animation-name: fadeIn, zoomIn;
-  animation-name: fadeIn, zoomIn;
-}
-
-.fadeZoomFadeDown.ng-enter {
-  -webkit-animation-duration: 0.2s, 0.2s;
-  -moz-animation-duration: 0.2s, 0.2s;
-  -ms-animation-duration: 0.2s, 0.2s;
-  animation-duration: 0.2s, 0.2s;
-  -webkit-animation-name: fadeIn, zoomIn;
-  -moz-animation-name: fadeIn, zoomIn;
-  -ms-animation-name: fadeIn, zoomIn;
-  animation-name: fadeIn, zoomIn;
-}
-
-.fadeZoomFadeDown.ng-leave {
-  -webkit-animation: fadeOutDown 0.2s;
-  -moz-animation: fadeOutDown 0.2s;
-  -ms-animation: fadeOutDown 0.2s;
-  animation: fadeOutDown 0.2s;
-}
-
-@-webkit-keyframes zoomIn {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale3d(0.8, 0.8, 0.8);
-    -moz-transform: scale3d(0.8, 0.8, 0.8);
-    -ms-transform: scale3d(0.8, 0.8, 0.8);
-    transform: scale3d(0.8, 0.8, 0.8);
-  }
-
-  50% {
-    opacity: 1;
-  }
-}
-
-@keyframes zoomIn {
-  0% {
-    opacity: 0;
-    -webkit-transform: scale3d(0.8, 0.8, 0.8);
-    -moz-transform: scale3d(0.8, 0.8, 0.8);
-    -ms-transform: scale3d(0.8, 0.8, 0.8);
-    transform: scale3d(0.8, 0.8, 0.8);
-  }
-
-  50% {
-    opacity: 1;
-  }
-}
