add angular swampdragon dependencies

--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -1,4 +1,5 @@
-{% load static %}
+{% load static swampdragon_tags %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -40,8 +41,6 @@
 </header>
 
 
-
-
 <side-panel visible="leftVisible" alignment="left" class="hidden-xs">
     <online-user-list></online-user-list>
 </side-panel>
@@ -58,12 +57,20 @@
 
 
 
+{% swampdragon_settings %}
+<script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.js' %}"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/datamapper.js"></script>
+
 {% block scripts %}
     <script src="{% static 'scripts/vendors.js' %}"></script>
     <script src="{% static 'scripts/main.js' %}"></script>
     <script src="{% static 'scripts/application.js' %}"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/angular/services.js"></script>
     <script src="{% static 'scripts/templates.js' %}"></script>
 {% endblock scripts %}
+
+
+
 
 </body>
 </html>
