--- a/servermon/templates/servermon/base.html
+++ b/servermon/templates/servermon/base.html
@@ -16,7 +16,7 @@
 
 
     {% swampdragon_settings %}
-    <script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/swampdragon.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/monitor.js' %}"></script>
 </body>
 </html>
