--- a/frontend/src/app/auth/signin.view.html
+++ b/frontend/src/app/auth/signin.view.html
@@ -4,7 +4,7 @@
         <h2 class="text-center">Log in</h2>
         <form method="post" ng-submit="vm.login()" name="loginForm" novalidate>
           <div class="form-group has-feedback">
-            <input class="form-control input-lg" type="text" name="email" ng-model="vm.credentials.email" placeholder="Email" required autofocus>
+            <input class="form-control input-lg" type="text" name="username" ng-model="vm.credentials.username" placeholder="Username" required autofocus>
             <span class="ion-at form-control-feedback"></span>
           </div>
 
